@@ -1,6 +1,7 @@
 *** WooCommerce Subscriptions Core Changelog ***
 
 2022-xx-x - version 1.4.0
+* Fix: Simple subscription elements on the product edit page not shown/hidden when necessary. PR#80
 
 2021-12-21 - version 1.3.0
 * Fix: Remove references to the Subscription extension in the tooltips found on the Payment Methods settings table. PR#55 wcpay#3234
